@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+17-Dec-2005
+~~~~~~~~~~~
+Bugfix: New detail crashes cleanice theme. Try another value... (reported
+	by Andras Mohari).
+
 16-Dec-2005
 ~~~~~~~~~~~
 Highlight icons using the theme's preferred colour instead of always using
